Hiera-ize/Parameterize
 - Since variables are now in-scope, drop to short form of reference in
   both init.pp and templates
 - Remove zookeeper::config class as it is now redundant
 - Update tests to match-ish, despite the fact that they can't run cause
   boxen/cardboard#13

--- a/templates/zoo.cfg
+++ b/templates/zoo.cfg
@@ -12,10 +12,10 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just
 # example sakes.
-dataDir=<%= scope.lookupvar('zookeeper::config::datadir') %>
+dataDir=<%= @datadir %>
 
 # the port at which the clients will connect
-clientPort=<%= scope.lookupvar('zookeeper::config::port') %>
+clientPort=<%= @port %>
 
 #
 # Be sure to read the maintenance section of the
