Return to using a custom homebrew formula
Allowing for idempotency that is otherwise lost

Fixes boxen/puppet-zookeeper#5

--- a/data/Darwin.yaml
+++ b/data/Darwin.yaml
@@ -6,3 +6,6 @@
   zookeeper::logdir:      "%{::boxen::config::logdir}/zookeeper"
 
   zookeeper::executable:  "%{::boxen::config::homebrewdir}/bin/zkServer"
+
+  zookeeper::package: "boxen/brews/zookeeper"
+  zookeeper::version: "3.4.6-boxen3"
