Encapsulate config, switch to boxen::env_script
Taking cues from boxen/puppet-redis, as in donaldguy/puppet-kafka,
encapsulate the configuration state so that we can ensure whole
presence/absence, and more nicely, use a single notify arrow to
hint the puppet scheduler rather than many individual requires

Also switch to new-school boxen::env_script type rather than just
file, cleaning up after our old self.

--- a/data/Darwin.yaml
+++ b/data/Darwin.yaml
@@ -1,10 +1,12 @@
 ---
+  zookeeper::host:        'localhost'
   zookeeper::port:        '12181'
 
   zookeeper::configdir:   "%{::boxen::config::configdir}/zookeeper"
   zookeeper::datadir:     "%{::boxen::config::datadir}/zookeeper"
   zookeeper::logdir:      "%{::boxen::config::logdir}/zookeeper"
 
+  zookeeper::servicename: "dev.zookeeper"
   zookeeper::executable:  "%{::boxen::config::homebrewdir}/bin/zkServer"
 
   zookeeper::package: "boxen/brews/zookeeper"
