--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,7 +1,8 @@
 ---
-  zookeeper::ensure:  'present'
+  zookeeper::ensure:   'present'
+  zookeeper::enable:   true
 
-  zookeeper::version: '3.4.6'
-  zookeeper::port: '2181'
+  zookeeper::version:  '3.4.6'
+  zookeeper::port:     '2181'
 
   zookeeper::logerror: "%{hiera('zookeeper::logdir')}/error.log"
